changed "like" path
